chore: Specify minimum Rust version
Specifies the `rust-version` in `Cargo.toml` to 1.86.0.
This ensures that users building the project have a compatible
Rust toolchain version, preventing potential build errors.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "aimbot"
 version = "0.1.0"
 edition = "2024"
+rust-version = "1.86.0"
 
 [dependencies]
 opencv = { version = "0.95.1", default-features = false, features = ["imgproc", "videoio", "imgcodecs"] }
