--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,9 @@ ndarray = "0.16.1"
 ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic", "ndarray", "tensorrt"] }
 anyhow = "1.0.99"
 dotenv = "0.15.0"
-makcu-rs = "0.1.1"
+makcu-rs = { git = "https://github.com/dat58/makcu-rs", branch = "main" }
 actix-web = "4.11.0"
+rand = "0.9.2"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"] }
