--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = "1.0.99"
 dotenv = "0.15.0"
 makcu-rs = { git = "https://github.com/dat58/makcu-rs", branch = "main" }
 actix-web = "4.11.0"
+actix-cors = "0.7.1"
 rand = "0.9.2"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
