feat: Update MAKCU baud rate and add mouse lock
Set baud rate to 4000000 and disable mouse lock.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,4 +32,5 @@ services:
       - TRT_MAX_PARTITION_ITERATIONS=10
       - TRT_BUILDER_OPTIMIZATION_LEVEL=5
       - MAKCU_PORT=/dev/ttyACM0
-      - MAKCU_BAUD=115200
+      - MAKCU_BAUD=4000000
+      - MAKCU_MOUSE_LOCK_WHILE_AIM=false
