--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ actix-web = "4.11.0"
 actix-cors = "0.7.1"
 rand = "0.9.2"
 serialport = "4.7.2"
+ctrlc = "3.4.7"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"] }
