feat: Add feature `disable-mouse`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ codegen-units = 1
 panic = "abort"
 
 [features]
+disable-mouse = []
 debug = []
 ndi4 = ["dep:ndi"]
 ndi6 = ["dep:grafton-ndi", "dep:lazy_static"]
