--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ ctrlc = "3.4.7"
 ndi = { version = "0.1.2", optional = true }
 grafton-ndi = { git = "https://github.com/dat58/ndi", branch = "hotfix-0.8.1", version = "0.8.2", optional = true }
 lazy_static = { version = "1.5.0", optional = true }
+uuid = { version = "1.18.0", features = ["v4"] }
 
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
@@ -34,6 +35,7 @@ panic = "abort"
 [features]
 disable-mouse = []
 debug = []
+save-bbox = ["debug"]
 ndi4 = ["dep:ndi"]
 ndi6 = ["dep:grafton-ndi", "dep:lazy_static"]
 default = ["ndi4"]
