--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ rust-version = "1.86.0"
 
 [dependencies]
 opencv = { version = "0.95.1", default-features = false, features = ["imgproc", "videoio", "imgcodecs"] }
-crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
+crossbeam = { version = "0.8.4", features = ["crossbeam-queue", "crossbeam-channel"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 ndarray = "0.16.1"
@@ -17,15 +17,13 @@ actix-web = "4.11.0"
 actix-cors = "0.7.1"
 rand = "0.9.2"
 serialport = "4.7.2"
-ctrlc = "3.4.7"
 ndi = { version = "0.1.2", optional = true }
 grafton-ndi = { git = "https://github.com/dat58/ndi", branch = "hotfix-0.8.1", version = "0.8.2", optional = true }
 lazy_static = { version = "1.5.0", optional = true }
 uuid = { version = "1.18.0", features = ["v4"] }
-
-
-[target.'cfg(not(target_env = "msvc"))'.dependencies]
-tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"] }
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"]}
+tokio-util = "0.7.16"
+mimalloc = "0.1.48"
 
 [profile.release]
 lto = true
