feat: Add intra_threads config option

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,9 @@ services:
       - TRT_FP16=true
       - TRT_MAX_PARTITION_ITERATIONS=10
       - TRT_BUILDER_OPTIMIZATION_LEVEL=5
+      - GPU_ID=0
+      - GPU_MEM_LIMIT=2147483648
+      - INTRA_THREADS=2
       - MAKCU_PORT=/dev/ttyACM0
       - MAKCU_BAUD=4000000
       - MOUSE_DPI=1000
