feat: Add button_test binary to read button input from serial
This commit introduces a new binary, `button_test`, that reads button input from a serial port.
The program continuously monitors the serial port for incoming data, interpreting '0' as button release and '1' as button press.
The program prints "PRESSED" or "RELEASED" only when the button state changes.
A new dependency `serialport` is also added.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,7 @@ default = ["ndi4"]
 [[bin]]
 path = "src/bin/mouse_test.rs"
 name = "mouse_test"
+
+[[bin]]
+path = "src/bin/button_test.rs"
+name = "button_test"
